[gd_scene load_steps=4 format=3 uid="uid://bmjq5t54g1ulv"]

[ext_resource type="Script" path="res://prefabs/uimanagement.gd" id="1_updwx"]
[ext_resource type="FontFile" uid="uid://b0txxuq8jq84g" path="res://materials/joystix monospace.otf" id="2_g8c8s"]
[ext_resource type="Script" path="res://scripts/score.gd" id="3_l46yw"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_updwx")

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 327.0
offset_right = 830.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("2_g8c8s")
theme_override_font_sizes/font_size = 50
text = "Quit?"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 491.0
offset_top = 191.0
offset_right = 745.0
offset_bottom = 268.0
theme_override_fonts/font = ExtResource("2_g8c8s")
theme_override_font_sizes/font_size = 50
text = "Retry?"

[node name="endscore" type="Label" parent="."]
layout_mode = 0
offset_left = 385.0
offset_top = 528.0
offset_right = 877.0
offset_bottom = 600.0
theme_override_fonts/font = ExtResource("2_g8c8s")
theme_override_font_sizes/font_size = 50
text = "Score: 00000"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_l46yw")

[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
